0.3.5

- Fixed bug: Correct date format in Dublin core dc:date
- Security: Fixed posting and editing by unauthorized users
- Introduced a Launcher to start SnipSnap directly from JAR
- Changed Attachments file store concept (WEB-INF/files/SnipName/file.ext)

0.3.4 - 2003-02-21

- Added feature: use Java2Html instead of regex [by Zohar], currently additional as "njava"
- Fixed bug: implemented getPost in BloggerAPI
- Security: Added warning when weblogs ping is on
- Fixed bug: SnipSnap install has now a SnipSnap snip
- Fixed bug: relative Images and Links in RSS feeds
- Added feature: RSS posts are now determined by headers (post titles) not by day
- Fixed bug: HTML encoding and & encoding in RSS feeds
- Added feature: {table} understands SUM, AVG, MAX, MIN, e.g. =SUM(A1:A3)
- Fixed bug: Mail-To-Weblog didn't work because user "stephan" was used, now admin is used
- Added feature: Configurable weblogs ping. Configuration is read from conf/weblogsping.txt
- Fixed bug: better logging
- Fixed bug: implemented getUserBlogs, getRecentPosts [by Calvin Yu] in BloggerAPI
- Added Feature: Attachments for snips
- WAR: introduced configuration properties for indexer and config files
- Developer: Refactored the rendering engine to form sub-project Radeox
- Developer: Added Service class for plugin loading (instead of undocumented sun class)
- Removed Transliterate in favour of UTF-8
- Developer: Added getParamDescription() to MacroParameter
- Fixed bug: RSS would display to many items
- Added feature: SnipSnap has XML-RPC interface with method "generator.version()" to get SnipSnap version
- Added feature: SnipSnap displays version in HTML with META generator tag
- Added feature: SnipSnap displays version information about itself with .../rest/version
- Fixed bug: external images didn't display

0.3.3 - 2003-01-22

- Fixed bug: web GUI import, multi-value html form parameter recognised for multipart/form-data
- Fixed bug: RSS feed truncated entities, e.g. &x32...