@@ -1,28 +1,27 @@
 /*
- * This file is part of "SnipSnap Radeox Rendering Engine".
+ * This file is part of "SnipSnap Wiki/Weblog".
  *
  * Copyright (c) 2002 Stephan J. Schmidt, Matthias L. Jugel
  * All Rights Reserved.
  *
- * Please visit http://radeox.org/ for updates and contact.
+ * Please visit http://snipsnap.org/ for updates and contact.
  *
  * --LICENSE NOTICE--
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either
- * version 2.1 of the License, or (at your option) any later version.
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License
+ * as published by the Free Software Foundation; either version 2
+ * of the License, or (at your option) any later version.
  *
- * This library is distributed in the hope that it will be useful,
+ * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
  *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this library; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  * --LICENSE NOTICE--
  */
-
 package org.snipsnap.test.snip;
 
 import junit.framework.Test;
@@ -36,7 +35,8 @@ public class AllSnipTests extends TestCase {
 
   public static Test suite() {
     TestSuite s = new TestSuite();
-    // s.addTestSuite(SnipSpaceFactoryTest.class);
+    s.addTestSuite(PermalinkTest.class);
+    s.addTestSuite(ImageTest.class);
     return s;
   }
 }
